After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695768 - provider: Silence warnings when setting :preseed-data to NULL
provider: Silence warnings when setting :preseed-data to NULL
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-03-13 12:49 UTC by Emanuele Aina
Modified: 2013-03-15 11:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
provider: Silence warnings when setting :preseed-data to NULL (1006 bytes, patch)
2013-03-13 12:49 UTC, Emanuele Aina
committed Details | Review

Description Emanuele Aina 2013-03-13 12:49:15 UTC
Setting the GoaProvider:preseed-data property to NULL results in the
following warning:

(gnome-control-center:29470): GLib-CRITICAL **: g_variant_ref_sink: assertion `value != NULL' failed
Comment 1 Emanuele Aina 2013-03-13 12:49:17 UTC
Created attachment 238771 [details] [review]
provider: Silence warnings when setting :preseed-data to NULL
Comment 2 Debarshi Ray 2013-03-15 11:53:30 UTC
Review of attachment 238771 [details] [review]:

Obviously correct. Thanks for the patch.