provider: Silence warnings when setting :preseed-data to NULL

https://bugzilla.gnome.org/show_bug.cgi?id=695768